<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="100dp"
        style="@style/AppTitleText"
        android:textSize="30sp"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/password_generator"/>

     <!--    output_box-->

    <EditText
        android:id="@+id/output_box"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/custom_border"
        android:drawableEnd="@drawable/icon"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_width="500dp"
        android:layout_height="48dp"
        android:textColor="@color/red"
        android:hint="@string/password"
        android:textStyle="bold"
        android:textColorHint="@color/red" />

    <!-- copy button-->

    <Button
        android:id="@+id/copy_button"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="280dp"
        android:drawableEnd="@drawable/arwoo"
        android:text="@string/copy_password"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:background="@drawable/button_box"
        app:backgroundTint="@null"
        />
<!--       generate-->
    <Button
        android:id="@+id/generate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="650dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:backgroundTint="@color/red"
        android:text="@string/generate"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginStart="10dp"
        android:text="@string/passwordLength"
        android:textSize="25sp"
        android:textColor="@color/red"
        android:textStyle="bold"
          />

    <!-- input button-->
        <EditText
          android:id="@+id/input"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:textColorHint="@color/red"
            android:hint="@string/enter_length"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:background="@drawable/custom_border"
            android:layout_marginTop="380dp"
            android:layout_marginStart="250dp"
            />

<!--    lower case checkbox-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="490dp"
        android:layout_marginStart="60dp"
        android:text="@string/lowercase"
        android:textSize="20sp"
        android:textColor="@color/watercolor"
        android:textStyle="bold"
        />

    <CheckBox
        android:id="@+id/LowercaseButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/checkbox_background"
        android:button="@null"
        android:layout_marginTop="485dp"
        android:layout_marginStart="10dp"
        />
<!-- uppercase checkbox-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="490dp"
        android:layout_marginStart="280dp"
        android:text="@string/uppercase"
        android:textSize="20sp"
        android:textColor="@color/watercolor"
        android:textStyle="bold"
        />

    <CheckBox
        android:id="@+id/UppercaseButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="485dp"
        android:background="@drawable/checkbox_background"
        android:button="@null"
        android:padding="14dp" />

<!--    number checkbox-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="560dp"
        android:layout_marginStart="60dp"
        android:text="@string/numbers"
        android:textSize="20sp"
        android:textColor="@color/watercolor"
        android:textStyle="bold"
        />

    <CheckBox
        android:id="@+id/NumberButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/checkbox_background"
        android:button="@null"
        android:layout_marginTop="550dp"
        android:layout_marginStart="10dp"
        />
<!--symbols checkbox-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="560dp"
        android:layout_marginStart="280dp"
        android:text="@string/Symbols"
        android:textSize="20sp"
        android:textColor="@color/watercolor"
        android:textStyle="bold"
        />

    <CheckBox
        android:id="@+id/symbolsButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:button="@null"
        android:background="@drawable/checkbox_background"
        android:layout_marginTop="545dp"
        android:layout_marginStart="225dp"
        />




</RelativeLayout>
